--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -6,23 +6,25 @@
     <uses-sdk android:minSdkVersion="6"></uses-sdk>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application android:icon="@drawable/parchment"
-        android:label="@string/app_name" >
+    <application android:label="@string/parchment_app_name"
+            android:icon="@drawable/parchment">
 
         <activity android:name=".SplashScreen"
-            android:label="@string/app_name"
+            android:label="@string/parchment_app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:configChanges="orientation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".ParchmentActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/parchment_app_name"
+                  android:icon="@drawable/parchment">
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="org.linuxmotion.intent.HANDLE_VIEW_RESOURCE" />
                 <category android:name="android.intent.category.OPENABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/*" />
@@ -33,8 +35,9 @@
         </activity>
 
         <activity android:name=".FilePicker"
-            android:label="@string/app_name" >
+            android:label="@string/parchment_app_name" >
         </activity>
 
     </application>
+
 </manifest>
